# ACSflix

./: .gitignore  CMakeLists.txt  Makefile  Notes  README.md  SenderFlow.cpp  SenderFlow.hpp  StopMechanics.md  WorkerFlow.cpp  WorkerFlow.hpp  mass_creator.py  plain.file  sender.c  worker.c
_data/: 10_10.txt
bufpool/: Buffer.cpp  Buffer.h  BufferPool.cpp  BufferPool.h  BufferPoolElement.cpp  BufferPoolElement.h  ZMQBuffer.h  ZMQBufferFactory.h  ZMQHeapBuffer.cpp  ZMQHeapBuffer.h  ZMQHeapBufferFactory.cpp  ZMQHeapBufferFactory.h  ZMQPooledBuffer.cpp  ZMQPooledBuffer.h  ZMQPooledBufferFactory.cpp  ZMQPooledBufferFactory.h
cmake/Modules/: Findczmq.cmake
cmd/: sender.cpp  sender3F1S.cpp  senderthreads.cpp  worker.cpp  worker3F1S.cpp
core/: .gitignore  CMakeLists.txt  emitter.cpp  lorem.txt  protocol.md  pub.cpp  receiver.cpp  sub.cpp  test.txt  usage_emitter.cpp
core/sources/: ContextListener.cpp  ContextListener.hpp  DataEndPoint.cpp  DataEndPoint.hpp  PBSender.cpp  PBSender.h  Sender.cpp  Sender.h  SenderExtension.cc  SenderExtension.h  StreamSender.cc  StreamSender.h  Worker.cpp  Worker.h  ZMQBuffer.cc  ZMQBuffer.h  ZMQHeapBuffer.h  ZMQHeapBufferFactory.h  ZMQPooledBuffer.cc  ZMQPooledBuffer.h  ZMQPooledBufferFactory.cc  ZMQPooledBufferFactory.h  test_sender.cpp  test_worker.cpp  utils.h
core/sources/cli/: emitter.cpp  receiver.cpp
core/sources/emitter/: Emitter.cpp  Emitter.hpp
core/sources/interface/: BulkDataZMQFlow.cc  BulkDataZMQFlow.h  BulkDataZMQSenderFlow.cc  BulkDataZMQSenderFlow.h
core/sources/publisher/: Publisher.cpp  Publisher.hpp
core/sources/receiver/: Receiver.cpp  Receiver.hpp
core/sources/subscriber/: Subscriber.cpp  Subscriber.hpp
core/sources/util/: Buffer.cc  Buffer.h  BufferPool.cc  BufferPool.h  BufferPoolElement.cc  BufferPoolElement.h  ProgressBar.cpp  ProgressBar.hpp  ScopedRef.hh  utils.cpp
docs/: index.md  input_test.json  sender3F1S.conf  worker3F1S.conf
proto/: BdBlock.pb.cc  BdBlock.pb.h  BdBlock.proto  Dummy.pb.cc  Dummy.pb.h  Dummy.proto  TestByte.proto
protos/: BdFileBlock.pb.cc  BdFileBlock.pb.h  BdFileBlock.proto  Simple.pb.cc  Simple.pb.h  Simple.proto
sender/: BytesSenderFlow.cpp  BytesSenderFlow.h  ProtobufSender.cpp  ProtobufSender.h  ProtobufSenderFlow.cpp  ProtobufSenderFlow.h  SenderFlow.cpp  SenderFlow.h  SenderStream.cpp  SenderStream.hpp
src/: SenderFlow.cpp  SenderFlow.h  SenderStream.cpp  SenderStream.h  SenderStream.hpp  WorkerFlow.cpp  WorkerFlow.h  WorkerFlow.hpp  WorkerStream.cpp  WorkerStream.h  WorkerStream.hpp
src/jsmnutils/: jsmn.c  jsmnutils.cpp  jsmnutils.h
src/test/: jsmnutils_test.cpp
tests/: sender.cpp  sender_stream.cpp  sender_stream_binary.cpp  worker.cpp  worker_binary.cpp
utils/: zmq_common.cpp  zmq_common.cpp~  zmq_common.c~  zmq_common.h
worker/: ProtobufWorker.cpp  ProtobufWorker.h  WorkerFlow.cpp  WorkerFlow.h  WorkerFlowCallback.cpp  WorkerFlowCallback.hpp  WorkerStream.cpp  WorkerStream.hpp
